# TODO-list_CPP_Qt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_RUS.md  TASK.md  TASK_RUS.md  clear_db.sh  init_db.sh  initial.sql  script.sh
incs/: AddTaskDialog.hpp  ChangeParametersDialog.hpp  DbTaskController.hpp  DbTaskManager.hpp  FilterDialog.hpp  FilterParams.hpp  MainWindow.hpp  SortDialog.hpp  Task.hpp  TaskWidgwet.hpp
srcs/: AddTaskDialog.cpp  AddTaskDialog.hpp  ChangeParametersDialog.cpp  DbTaskConnector.cpp  DbTaskController.cpp  DbTaskManager.cpp  FilterDialog.cpp  FilterDialog.hpp  MainWindow.cpp  MainWindow.hpp  SortDialog.cpp  TaskWidget.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
